
Improved report_comments to search across multiple yeargroups.

Function list_support_teachers added to list SEN/Support staff.

Comments option to share with SEN/Support staff.

New CFG option sitephonecode for the international dialling code of
home country.

Fix to transport edit and transport display.

Added a 'trigger' to email defined users for a specific comment
category.



Version ClaSS-1.0.14 release (2012/01/27)
-------------------------------------------

Improved the absence list to respect the selected section.

Fixes to the print attendance summary: only first period AM/PM is
included; start the week with a Monday always.

Fix to the selerySwitch function when in sideoptions.


Version ClaSS-1.0.13 release (2012/01/20)
-------------------------------------------

Re-organised the js scripts as host, book and editor.

Fix to a type in the import student scripts which affected addresses.

Fix to listing siblins on student_view page.

Edited language strings.

Fix to editing an order's supplier.

Fix to the setting of yid in the register which failed when regtypes=year.

Use preferred forename for student epfusernames if set.

Removed redundat externalbook call from student_view page (cause of
logging out problem).

Added late to register totals on the Register completion page.

Bus departue time editable in transport_route.

Hide choice of acitivies for merits if only one exists.

Re-orgnaised logging out so that closing of a seesion is a function.

Option added to custom group search for current or next enrolment
year.


Version ClaSS-1.0.12 release (2012/01/07)
-------------------------------------------

Support profiles re-organised to include two groups of SEN assessments
and the extra support search now works.

Fixed student_scores in InfoBook as nullcorrect spaces no longer an issue.

CFG option to make IP address checking optional.

Improved security through better use of cookies.
